<resources>
    <string name="app_name">GrTest</string>
    <string name="user_avatar">User avatar</string>
    <string name="users">Users</string>
    <string name="user_detail">User detail</string>
    <string name="error_data_load">Error occurred while loading data</string>
    <string name="retry">Retry</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="refresh_data">Refresh data</string>
</resources>
