<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivUserDetailAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/user_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvFirstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/first_name"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserDetailAvatar" />

            <TextView
                android:id="@+id/tvLastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/last_name"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tvFirstNameLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstNameLabel" />

            <TextView
                android:id="@+id/tvEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"
                android:text="@string/e_mail"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tvLastNameLabel"
                app:layout_constraintTop_toBottomOf="@+id/tvLastNameLabel" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvFirstNameLabel"
                app:layout_constraintStart_toEndOf="@+id/tvFirstNameLabel"
                tools:text="John" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvLastNameLabel"
                app:layout_constraintStart_toEndOf="@+id/tvLastNameLabel"
                tools:text="Doe" />

            <TextView
                android:id="@+id/tvUserDetailEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorText"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvEmailLabel"
                app:layout_constraintStart_toEndOf="@+id/tvEmailLabel"
                tools:text="john.doe@gmail.com" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressUserDetail"
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvUserDetailError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:maxWidth="250dp"
        android:text="@string/error_data_load"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnUserDetailRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/retry"
        android:textColor="@color/colorText"
        android:visibility="gone" />

</LinearLayout>